Delet2
after the buimld i get 

colcon build --packages-select tutorial_pkg
Starting >>> tutorial_pkg
--- stderr: tutorial_pkg                               
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:57:6: error: no declaration matches ‘void Tracker::_initTracker(cv::Mat, cv::Rect2d)’
   57 | void Tracker::_initTracker(cv::Mat frame, cv::Rect2d obj)
      |      ^~~~~~~
In file included from /home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:1:
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/include/tutorial_pkg/tracker.hpp:19:8: note: candidate is: ‘void Tracker::_initTracker(cv::Mat, cv::Rect)’
   19 |   void _initTracker(cv::Mat frame, cv::Rect obj);
      |        ^~~~~~~~~~~~
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/include/tutorial_pkg/tracker.hpp:8:7: note: ‘class Tracker’ defined here
    8 | class Tracker : public rclcpp::Node
      |       ^~~~~~~
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:69:94: error: expected unqualified-id before ‘&’ token
   69 | void Tracker::_designateControl(geometry_msgs::msg::Twist &vel_msg, cv::Rect const cv::Rect2d& obj, uint32_t img_width)
      |                                                                                              ^
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:69:94: error: expected ‘)’ before ‘&’ token
   69 | void Tracker::_designateControl(geometry_msgs::msg::Twist &vel_msg, cv::Rect const cv::Rect2d& obj, uint32_t img_width)
      |                                ~                                                             ^
      |                                                                                              )
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:69:96: error: expected initializer before ‘obj’
   69 | void Tracker::_designateControl(geometry_msgs::msg::Twist &vel_msg, cv::Rect const cv::Rect2d& obj, uint32_t img_width)
      |                                                                                                ^~~
make[2]: *** [CMakeFiles/tracker.dir/build.make:63: CMakeFiles/tracker.dir/src/tracker.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:111: CMakeFiles/tracker.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
---
Failed   <<< tutorial_pkg [29.8s, exited with code 2]

Summary: 0 packages finished [32.0s]
  1 package failed: tutorial_pkg
  1 package had stderr output: tutorial_pkg
